compiler/gw-bootstrap/crates/gw_parse/tests/snapshots/corpus__pass_corpus@049_else_if.gw.snap
---
source: crates/gw_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `t` @1:4..1:5
    ParamList @1:5..1:22
      LParen `(` @1:5..1:6
      Param @1:6..1:12
        Ident `x` @1:6..1:7
        Colon `:` @1:7..1:8
        PathType @1:9..1:12
          Ident `i32` @1:9..1:12
      Comma `,` @1:12..1:13
      Param @1:14..1:20
        Ident `y` @1:14..1:15
        Colon `:` @1:15..1:16
        PathType @1:17..1:20
          Ident `i32` @1:17..1:20
      RParen `)` @1:20..1:21
    RetType @1:22..1:28
      Arrow `->` @1:22..1:24
      PathType @1:25..1:28
        Ident `u0` @1:25..1:27
    Block @1:28..2:1
      LBrace `{` @1:28..1:29
      IfExpr @1:30..1:62
        KwIf `if` @1:30..1:32
        PathExpr @1:33..1:35
          Ident `x` @1:33..1:34
        Block @1:35..1:39
          LBrace `{` @1:35..1:36
          RBrace `}` @1:37..1:38
        KwElse `else` @1:39..1:43
        IfExpr @1:44..1:62
          KwIf `if` @1:44..1:46
          PathExpr @1:47..1:49
            Ident `y` @1:47..1:48
          Block @1:49..1:53
            LBrace `{` @1:49..1:50
            RBrace `}` @1:51..1:52
          KwElse `else` @1:53..1:57
          Block @1:58..1:62
            LBrace `{` @1:58..1:59
            RBrace `}` @1:60..1:61
      RBrace `}` @1:62..1:63
