compiler/gw-bootstrap/crates/gw_parse/tests/snapshots/corpus__pass_corpus@050_while.gw.snap
---
source: crates/gw_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `t` @1:4..1:5
    ParamList @1:5..1:8
      LParen `(` @1:5..1:6
      RParen `)` @1:6..1:7
    RetType @1:8..1:14
      Arrow `->` @1:8..1:10
      PathType @1:11..1:14
        Ident `u0` @1:11..1:13
    Block @1:14..2:1
      LBrace `{` @1:14..1:15
      WhileExpr @1:16..1:39
        KwWhile `while` @1:16..1:21
        LiteralExpr @1:22..1:27
          KwTrue `true` @1:22..1:26
        Block @1:27..1:39
          LBrace `{` @1:27..1:28
          ExprStmt @1:29..1:37
            ReturnExpr @1:29..1:35
              KwReturn `return` @1:29..1:35
            Semi `;` @1:35..1:36
          RBrace `}` @1:37..1:38
      RBrace `}` @1:39..1:40
