compiler/gw-bootstrap/crates/gw_parse/tests/snapshots/corpus__pass_corpus@051_call_no_args.gw.snap
---
source: crates/arsenal_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..3:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `f` @1:4..1:5
    ParamList @1:5..1:8
      LParen `(` @1:5..1:6
      RParen `)` @1:6..1:7
    RetType @1:8..1:14
      Arrow `->` @1:8..1:10
      PathType @1:11..1:14
        Ident `u0` @1:11..1:13
    Block @1:14..2:1
      LBrace `{` @1:14..1:15
      RBrace `}` @1:15..1:16
  FnDecl @2:1..3:1
    KwFn `fn` @2:1..2:3
    Ident `t` @2:4..2:5
    ParamList @2:5..2:8
      LParen `(` @2:5..2:6
      RParen `)` @2:6..2:7
    RetType @2:8..2:14
      Arrow `->` @2:8..2:10
      PathType @2:11..2:14
        Ident `u0` @2:11..2:13
    Block @2:14..3:1
      LBrace `{` @2:14..2:15
      LetStmt @2:16..2:29
        KwLet `let` @2:16..2:19
        WildcardPat @2:20..2:22
          Ident `_` @2:20..2:21
        Eq `=` @2:22..2:23
        CallExpr @2:24..2:27
          PathExpr @2:24..2:25
            Ident `f` @2:24..2:25
          ArgList @2:25..2:27
            LParen `(` @2:25..2:26
            RParen `)` @2:26..2:27
        Semi `;` @2:27..2:28
      RBrace `}` @2:29..2:30
