compiler/gw-bootstrap/crates/gw_parse/tests/snapshots/corpus__pass_corpus@053_call_nested.gw.snap
---
source: crates/arsenal_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..3:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `id` @1:4..1:6
    ParamList @1:6..1:15
      LParen `(` @1:6..1:7
      Param @1:7..1:13
        Ident `x` @1:7..1:8
        Colon `:` @1:8..1:9
        PathType @1:10..1:13
          Ident `i32` @1:10..1:13
      RParen `)` @1:13..1:14
    RetType @1:15..1:22
      Arrow `->` @1:15..1:17
      PathType @1:18..1:22
        Ident `i32` @1:18..1:21
    Block @1:22..2:1
      LBrace `{` @1:22..1:23
      ExprStmt @1:24..1:34
        ReturnExpr @1:24..1:32
          KwReturn `return` @1:24..1:30
          PathExpr @1:31..1:32
            Ident `x` @1:31..1:32
        Semi `;` @1:32..1:33
      RBrace `}` @1:34..1:35
  FnDecl @2:1..3:1
    KwFn `fn` @2:1..2:3
    Ident `t` @2:4..2:5
    ParamList @2:5..2:8
      LParen `(` @2:5..2:6
      RParen `)` @2:6..2:7
    RetType @2:8..2:14
      Arrow `->` @2:8..2:10
      PathType @2:11..2:14
        Ident `u0` @2:11..2:13
    Block @2:14..3:1
      LBrace `{` @2:14..2:15
      LetStmt @2:16..2:35
        KwLet `let` @2:16..2:19
        WildcardPat @2:20..2:22
          Ident `_` @2:20..2:21
        Eq `=` @2:22..2:23
        CallExpr @2:24..2:33
          PathExpr @2:24..2:26
            Ident `id` @2:24..2:26
          ArgList @2:26..2:33
            LParen `(` @2:26..2:27
            CallExpr @2:27..2:32
              PathExpr @2:27..2:29
                Ident `id` @2:27..2:29
              ArgList @2:29..2:32
                LParen `(` @2:29..2:30
                LiteralExpr @2:30..2:31
                  IntLit `1` @2:30..2:31
                RParen `)` @2:31..2:32
            RParen `)` @2:32..2:33
        Semi `;` @2:33..2:34
      RBrace `}` @2:35..2:36
